Model and model controller complete
Completed the Model and model controller. Now focusing on bringing the correct functionality to the app. Or commiting suicide, which seems like the better option.

--- a/Pair/Pair/Base.lproj/Main.storyboard
+++ b/Pair/Pair/Base.lproj/Main.storyboard
@@ -13,21 +13,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="tyH-Nq-yIM">
+                        <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="0ND-S0-Ffz">
                             <rect key="frame" x="0.0" y="136" width="600" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Randomizer"/>
-                            <connections>
-                                <action selector="RandomizeItemsButtonTapped:" destination="kdv-VM-dVC" eventType="touchUpInside" id="t6A-5v-hZw"/>
-                            </connections>
-                        </button>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <items>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="UMu-bs-Tff"/>
+                                <barButtonItem style="plain" id="mzP-06-7Ty">
+                                    <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="18p-NQ-QaD">
+                                        <rect key="frame" x="259" y="7" width="82" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Randomizer"/>
+                                    </button>
+                                </barButtonItem>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="PBa-bg-uPp"/>
+                            </items>
+                        </toolbar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6Km-uj-Shd">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="peopleTableViewCell" id="6Km-uj-Shd">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Km-uj-Shd" id="gpQ-ge-MXw">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOo-Bd-VNv">
+                                            <rect key="frame" x="279" y="11" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="SOo-Bd-VNv" secondAttribute="trailing" constant="279" id="2fB-jW-dQi"/>
+                                        <constraint firstItem="SOo-Bd-VNv" firstAttribute="top" secondItem="gpQ-ge-MXw" secondAttribute="top" constant="11" id="Zs3-N8-6SG"/>
+                                        <constraint firstItem="SOo-Bd-VNv" firstAttribute="leading" secondItem="gpQ-ge-MXw" secondAttribute="leading" constant="279" id="qkU-10-8W4"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -36,6 +56,7 @@
                             <outlet property="delegate" destination="kdv-VM-dVC" id="nxp-Dn-wTQ"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="kVu-nf-7uw">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="uCC-c1-8qb">
                             <connections>
@@ -43,6 +64,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yNr-hM-Awp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
